--- a/preEntrega01_React/index.html
+++ b/preEntrega01_React/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="./9113326_phoenix_framework_icon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pre Entrega 01 React</title>
   </head>
